--- a/lib/bower.json
+++ b/lib/bower.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "angular": "~1.4.4",
+    "angular-filter": "~0.5.5",
+    "angular-route": "~1.4.4",
     "bootstrap": "~3.3.5",
     "firebase": "~2.2.9",
     "jquery": "~2.1.4",
